--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="nav">
+        <div class="container"></div>
+    </div>
 </body>
 </html>
