--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="nav">
-        <div class="container"></div>
-    </div>
+    <navbar class="nav">
+        <div class="container">
+            <h1 class="nav-title">Ravshanov Muhriddin</h1>
+            <ul class="nav-list">
+                <li class="nav-item"><a href="#">Home</a></li>
+                <li class="nav-item"><a href="#">About</a></li>
+                <li class="nav-item"><a href="#">Project</a></li>
+                <li class="nav-item"><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </navbar>
 </body>
 </html>
