--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="container">
             <h1 class="nav-title">Ravshanov Muhriddin</h1>
             <ul class="nav-list">
-                <li class="nav-item"><a href="#">Home</a></li>
+                <li class="nav-item"><a class="active" href="#">Home</a></li>
                 <li class="nav-item"><a href="#">About</a></li>
                 <li class="nav-item"><a href="#">Project</a></li>
                 <li class="nav-item"><a href="#">Contact</a></li>
