--- a/index.html
+++ b/index.html
@@ -16,5 +16,12 @@
             </ul>
         </div>
     </navbar>
+    <div class="header">
+        <div class="container">
+            <ul class="header-list">
+                <li class="header-item"></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
