--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
     <div class="header">
         <div class="container">
             <ul class="header-list">
+                <li class="header-item">
+                    <span>Hey!</span>
+                </li>
+                <li class="header-item">
+                    <h2>I'm <b>Ravshanov Muhriddin</b>. an Frontend developer</h2>
+                </li>
+                <li class="header-item">
+                    <img src="images/Line Vector.png" alt="">
+                </li>
+                <li class="header-item">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut a et nobis est recusandae porro.</p>
+                </li>
+                <li class="header-item">
+                    <ul class="header-item-list">
+                        <li class="header-item-item">Follow Me</li>
+                        <li class="header-item-item"><a href="#"><img src="images/instagram.svg" alt=""></a></li>
+                        <li class="header-item-item"><a href="#"><img src="images/youtube.svg" alt=""></a></li>
+                        <li class="header-item-item"><a href="#"><img src="images/telegram.png" alt=""></a></li>
+                    </ul>
+                </li>
                 <li class="header-item"></li>
             </ul>
         </div>
