--- a/index.html
+++ b/index.html
@@ -1,47 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <navbar class="nav">
-        <div class="container">
-            <h1 class="nav-title">Ravshanov Muhriddin</h1>
-            <ul class="nav-list">
-                <li class="nav-item"><a class="active" href="#">Home</a></li>
-                <li class="nav-item"><a href="#">About</a></li>
-                <li class="nav-item"><a href="#">Project</a></li>
-                <li class="nav-item"><a href="#">Contact</a></li>
-            </ul>
+    <div class="sidebar">
+        <div class="sidebar-top">
+            <img width="80%" src="images/RavshanovMuhriddin.jpg" alt="">
+            <h2 class="name">Muhriddin</h2>
+            <p class="job-name">Frontend Developer</p>
         </div>
-    </navbar>
-    <div class="header">
-        <div class="container">
-            <ul class="header-list">
-                <li class="header-item">
-                    <span>Hey!</span>
-                </li>
-                <li class="header-item">
-                    <h2>I'm <b>Ravshanov Muhriddin</b>. an Frontend developer</h2>
-                </li>
-                <li class="header-item">
-                    <img src="images/Line Vector.png" alt="">
-                </li>
-                <li class="header-item">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut a et nobis est recusandae porro.</p>
-                </li>
-                <li class="header-item">
-                    <ul class="header-item-list">
-                        <li class="header-item-item">Follow Me</li>
-                        <li class="header-item-item"><a href="#"><img src="images/instagram.svg" alt=""></a></li>
-                        <li class="header-item-item"><a href="#"><img src="images/youtube.svg" alt=""></a></li>
-                        <li class="header-item-item"><a href="#"><img src="images/telegram.png" alt=""></a></li>
-                    </ul>
-                </li>
-                <li class="header-item"></li>
-            </ul>
-        </div>
+        <ul class="sidebar-list">
+            <li class="sidebar-item">
+                <a class="sidebar-link" href="#">
+                    <i class="fa-solid fa-house-chimney"></i>
+                    Home
+                </a>
+            </li>
+            <li class="sidebar-item bg-color">
+                <a class="sidebar-link" href="#">
+                    <i class="fa-solid fa-a"></i>
+                    About
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a class="sidebar-link" href="#">
+                    <i class="fa-solid fa-a"></i>
+                    My Skills
+                </a>
+            </li>
+            <li class="sidebar-item bg-color">
+                <a class="sidebar-link" href="#">
+                    <i class="fa-solid fa-briefcase"></i>
+                    Work
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a class="sidebar-link" href="#">
+                    <i class="fa-solid fa-address-card"></i>
+                    Contact
+                </a>
+            </li>
+            <li class="sidebar-item bg-color">
+                <a class="sidebar-link" href="#">
+                    <i class="fa-solid fa-address-card"></i>
+                    Resume
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a class="sidebar-link" href="#"><i class="fa-brands fa-telegram"></i></a>
+                <a class="sidebar-link" href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a class="sidebar-link" href="#"><i class="fa-brands fa-github-square"></i></a>
+                <a class="sidebar-link" href="#"><i class="fa-solid fa-square-envelope"></i></a>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
+
+    <!-- <i class="fa-solid fa-inbox"></i> -->
