--- a/index.html
+++ b/index.html
@@ -16,43 +16,43 @@
             <p class="job-name">Frontend Developer</p>
         </div>
         <ul class="sidebar-list">
-            <li class="sidebar-item">
+            <li class="sidebar-item draw">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-house-chimney"></i>
                     Home
                 </a>
             </li>
-            <li class="sidebar-item bg-color">
+            <li class="sidebar-item draw bg-color">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-a"></i>
                     About
                 </a>
             </li>
-            <li class="sidebar-item">
+            <li class="sidebar-item draw">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-a"></i>
                     My Skills
                 </a>
             </li>
-            <li class="sidebar-item bg-color">
+            <li class="sidebar-item draw bg-color">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-briefcase"></i>
                     Work
                 </a>
             </li>
-            <li class="sidebar-item">
+            <li class="sidebar-item draw">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-address-card"></i>
                     Contact
                 </a>
             </li>
-            <li class="sidebar-item bg-color">
+            <li class="sidebar-item draw bg-color">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-address-card"></i>
                     Resume
                 </a>
             </li>
-            <li class="sidebar-item">
+            <li class="sidebar-item draw">
                 <a class="sidebar-link" href="#"><i class="fa-brands fa-telegram"></i></a>
                 <a class="sidebar-link" href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a class="sidebar-link" href="#"><i class="fa-brands fa-github-square"></i></a>
