--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     Home
                 </a>
             </li>
-            <li class="sidebar-item bg-color">
+            <li class="sidebar-item sidebar-items">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-a"></i>
                     About
@@ -34,7 +34,7 @@
                     My Skills
                 </a>
             </li>
-            <li class="sidebar-item bg-color">
+            <li class="sidebar-item sidebar-items">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-briefcase"></i>
                     Work
@@ -46,7 +46,7 @@
                     Contact
                 </a>
             </li>
-            <li class="sidebar-item bg-color">
+            <li class="sidebar-item sidebar-items">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-address-card"></i>
                     Resume
