--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body style="display: flex;">
     <div class="sidebar">
         <div class="sidebar-top">
             <img width="80%" src="images/RavshanovMuhriddin.jpg" alt="">
@@ -21,45 +21,48 @@
                     <i class="fa-solid fa-house-chimney"></i>
                     Home
                 </a>
+                <hr>
             </li>
             <li class="sidebar-item sidebar-items">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-a"></i>
                     About
                 </a>
+                <hr>
             </li>
             <li class="sidebar-item">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-a"></i>
                     My Skills
                 </a>
+                <hr>
             </li>
             <li class="sidebar-item sidebar-items">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-briefcase"></i>
                     Work
                 </a>
+                <hr>
             </li>
             <li class="sidebar-item">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-address-card"></i>
                     Contact
                 </a>
+                <hr>
             </li>
             <li class="sidebar-item sidebar-items">
-                <a class="sidebar-link" href="#">
-                    <i class="fa-solid fa-address-card"></i>
-                    Resume
-                </a>
-            </li>
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="#"><i class="fa-brands fa-telegram"></i></a>
-                <a class="sidebar-link" href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a class="sidebar-link" href="#"><i class="fa-brands fa-github-square"></i></a>
-                <a class="sidebar-link" href="#"><i class="fa-solid fa-square-envelope"></i></a>
+                <div>
+                    <a href="https://t.me/Ravshanov_Muhriddin"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="https://www.linkedin.com/in/muhriddin-ravshanov-215643234"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-github-square"></i></a>
+                    <a href="#"><i class="fa-solid fa-square-envelope"></i></a>
+                </div>
+                <hr>
             </li>
         </ul>
     </div>
+    
 </body>
 </html>
 
