--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </li>
             <li class="sidebar-item">
                 <a class="sidebar-link" href="#">
-                    <i class="fa-solid fa-a"></i>
+                    <i class="fa-solid fa-sliders"></i>
                     My Skills
                 </a>
                 <hr>
