--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </li>
             <li class="sidebar-item">
                 <a class="sidebar-link" href="#">
-                    <i class="fa-solid fa-a"></i>
+                    <i class="fa-solid fa-address-card"></i>
                     About
                 </a>
                 <hr>
@@ -46,7 +46,7 @@
             </li>
             <li class="sidebar-item sidebar-items">
                 <a class="sidebar-link" href="#">
-                    <i class="fa-solid fa-address-card"></i>
+                    <i class="fa-solid fa-address-book"></i>
                     Contact
                 </a>
                 <hr>
@@ -55,8 +55,8 @@
                 <div>
                     <a href="https://t.me/Ravshanov_Muhriddin"><i class="fa-brands fa-telegram"></i></a>
                     <a href="https://www.linkedin.com/in/muhriddin-ravshanov-215643234"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-github-square"></i></a>
-                    <a href="#"><i class="fa-solid fa-square-envelope"></i></a>
+                    <a href="https://github.com/MuhriddinRavshanov"><i class="fa-brands fa-github-square"></i></a>
+                    <a href="mailto: ravshanovmuhriddin1999@gmail.com"><i class="fa-solid fa-envelope-circle-check"></i></a>
                 </div>
                 <hr>
             </li>
