--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="job-name">Frontend Developer</p>
         </div>
         <ul class="sidebar-list">
-            <li class="sidebar-item sidebar-items">
+            <li class="sidebar-item sidebar-items activ">
                 <a class="sidebar-link" href="#">
                     <i class="fa-solid fa-house-chimney"></i>
                     Home
@@ -62,8 +62,7 @@
             </li>
         </ul>
     </div>
-    
+
+<script src="js/main.js"></script>    
 </body>
 </html>
-
-    <!-- <i class="fa-solid fa-inbox"></i> -->
